	* Fixed setting temperature in OctoPrint's temperature tab when printing
	* Brim line count can be set in slicer profile editor
	* Model editor prevents scaling a models less than zero
	* Model editor allows scaling multiple axis at the same time with the inputs
	* Added buttons that allow users to see where their calibrated Z0 values are for each corner

V0.28.2 March 4, 2016

	* Fixed read/write message error when using Windows

V0.28.1 March 4, 2016

	* Fixed issue where the layer numbers shown in OctoPrint's G-code viewer would differ from those used in the mid-print filament change pre-processor stage

V0.28 March 2, 2016

	* Implemented mid-print filement change pre-processor and button. Thanks drschlaumeier!
	* Section in the control tab can now be expanded and hidden. Thanks TonyH!
	* Manual section in slicer profile editor now allows changing the model thickness and top/bottom thickness. Thanks Muele!
	* Printer settings can be saved and restored from a file. Thanks ra100!
	* Added warning about needing to restart printer for changes to speed limits to take affect
	* Added enabling/disabling wave bonding to the change settings before print dialog
	* Added warning if trying to connect to a printer that you don't have read/write access to
	* Improved reliability of connecting to printer when running on Windows
	* Added purple printer color

V0.27.1 February 22, 2016

	* Fixed issue where webcam URL's couldn't be changed

V0.27 February 20, 2016

	* Builtin webcam server
	* Slicer profile editor now makes manually settings certain values simplier
	* Fixed issue where unloading/loading filament would hang
	* Fixed isse in slicer profiles where the wall thickness would always be 0.35mm
	* Fixed the need to run the Windows installer twice

V0.26 February 9, 2016

	* Added support for the Micro 3D compatible heatbed. Thanks Loswave!
	* Fixed issue where commands would occasionally be ignored when a lot of commands were sent at once