@@ -11,6 +11,7 @@ V0.29 March X, 2016
 	* Model editor prevents scaling a models less than zero
 	* Model editor allows scaling multiple axis at the same time with the inputs
 	* Added buttons that allow users to see where their calibrated Z0 values are for each corner
+	* Improved connecting to printer
 
 V0.28.2 March 4, 2016
 
